초안 잡는 중

--- a/index.html
+++ b/index.html
@@ -4,8 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Freitag-copy-paste</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pragati+Narrow:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <title>https://freitag.ch/en_KR</title>
   </head>
-  <body></body>
+  <body>
+    <nav>
+      <div class="logo">
+        <img class="Freitag" src="/identity/F-logo.43d753f6.jpg" alt="" />
+      </div>
+    </nav>
+    <!-- 네비게이션 바 -->
+    <div class="layout">
+      <div class="mainBody">
+        <!-- 메인 영역 -->
+        <div class="fullImg"></div>
+
+        <div class="title bottomBorder topBorder">
+          <h1>WE THINK AND ACT IN CYCLES</h1>
+          <h2>BAGS AND ACCESSORIES MADE FROM USED AND CIRCULAR MATERIALS</h2>
+        </div>
+        <!-- layout,mainBody닫는 태그 -->
+      </div>
+    </div>
+  </body>
   <script src="script.js"></script>
 </html>
