--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           <h1>WE THINK AND ACT IN CYCLES</h1>
           <h2>BAGS AND ACCESSORIES MADE FROM USED AND CIRCULAR MATERIALS</h2>
         </div>
+        <div class="halfBlock"></div>
         <!-- layout,mainBody닫는 태그 -->
       </div>
     </div>
