텍스트루프,레이아웃 초안 짜는중

--- a/index.html
+++ b/index.html
@@ -21,21 +21,34 @@
   <body>
     <nav>
       <div class="logo">
-        <img class="Freitag" src="/identity/F-logo.43d753f6.jpg" alt="" />
+        <img class="Freitag" src="./identity/F-logo.43d753f6.jpg" alt="" />
       </div>
     </nav>
     <!-- 네비게이션 바 -->
     <div class="layout">
-      <div class="mainBody">
-        <!-- 메인 영역 -->
-        <div class="fullImg"></div>
+      <div class="mainBody line">
+        <div class="container">
+          <!-- 메인 영역 -->
+          <div class="fullImg line"></div>
 
-        <div class="title bottomBorder topBorder">
-          <h1>WE THINK AND ACT IN CYCLES</h1>
-          <h2>BAGS AND ACCESSORIES MADE FROM USED AND CIRCULAR MATERIALS</h2>
+          <div class="title line">
+            <h1>WE THINK AND ACT IN CYCLES</h1>
+            <h2>BAGS AND ACCESSORIES MADE FROM USED AND CIRCULAR MATERIALS</h2>
+          </div>
+          <div class="halfBlock line">
+            <img class="bagProfile" src="" alt="" />
+          </div>
+          <div class="halfBlock line">
+            <img class="bagProfile" src="" alt="" />
+          </div>
+          <div class="fullBlock line">
+            <h3 class="Looping">
+              BAGS BAGS BAGS BAGS BAGS BAGS BAGS BAGS BAGS BAGS BAGS BAGS BAGS
+              BAGS BAGS BAGS BAGS BAGS BAGS BAGS
+            </h3>
+          </div>
+          <!-- layout,mainBody닫는 태그 -->
         </div>
-        <div class="halfBlock"></div>
-        <!-- layout,mainBody닫는 태그 -->
       </div>
     </div>
   </body>
