--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
               BAGS BAGS BAGS BAGS BAGS BAGS BAGS
             </h3>
           </div>
+          <div class="itemBox line"></div>
+          <div class="itemBox line"></div>
+          <div class="itemBox line"></div>
+          <div class="itemBox line"></div>
+          <div class="itemBox line"></div>
+          <div class="itemBox line"></div>
           <!-- layout,mainBody닫는 태그 -->
         </div>
       </div>
